加入轴线、轴上点

--- a/qml.qrc
+++ b/qml.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>CurveRangePage.qml</file>
+        <file>CurvePage.qml</file>
     </qresource>
 </RCC>
